--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dev = [
 so101-find-port = "find_port:main"
 so101-read-device = "read_device:main"
 so101-calibrate = "calibrate:main"
-so101-setup = "so101_setup:main"
+so101-setup = "setup:main"
 so101-teleoperate = "teleoperate:main"
 so101-write-position = "write_position:main"
 so101-remoteoperate = "remoteoperate:main"
